log/build_2023-11-30_19-25-00/frontier_stopper/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/arms/turtlebot3_ws/install/frontier_stopper/lib/python3.10/site-packages/frontier_stopper/stop_frontier_exploration.py", line 18
    if msg.data = False:
       ^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?

